Updates index.html to have header & main sections

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Title of Your Page</title>
+  <title>Home</title>
   <script>
 
   </script>
@@ -12,6 +12,11 @@
 </head>
 
 <body>
-	<p>This is the homepage for Jason Macdonald WDD330_W22 project.</p>
+    <header>
+
+    </header>
+    <main>
+        <p>This is the homepage for Jason Macdonald WDD330_W22 project.</p>
+    </main>
 </body>
 </html>
