add pages directory, js directory main.js

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
   <title>Home</title>
-  <script>
-
+  <script src="main.js">
   </script>
 
   <style>
@@ -13,7 +12,10 @@
 
 <body>
     <header>
-
+        <h1>Table of Contents</h1>
+        <ol id="table-of-contents">
+            
+        </ol>
     </header>
     <main>
         <p>This is the homepage for Jason Macdonald WDD330_W22 project.</p>
