Added a list for navigation to index.html

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1>Table of Contents</h1>
         <ol id="table-of-contents">
-            
+            <li>Week 1</li>
         </ol>
     </header>
     <main>
