Rework entire home page. Add navigation. Link CSS.

--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!doctype html>
 <html>
+
 <head>
-  <title>Home</title>
-  <script src="main.js">
-  </script>
-
-  <style>
-
-  </style>
+    <title>Home</title>
+    <script src="main.js"> </script>
+    <link rel="stylesheet" href="homeStyle.css">
 </head>
 
 <body>
     <header>
-        <h1>Table of Contents</h1>
-        <ol id="table-of-contents">
-            <li>Week 1</li>
-        </ol>
+        <nav class="main-home-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Notes</a></li>
+                <li><a href="#">Examples</a></li>
+                <li><a href="#">Team Meetings</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <p>This is the homepage for Jason Macdonald WDD330_W22 project.</p>
     </main>
 </body>
+
 </html>
