updating sub-pages to have nested li for nav bar

--- a/notes.html
+++ b/notes.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <main>
-        <p>This is the homepage for Jason Macdonald WDD330_W22 project.</p>
+        <h1>All notes will be added here.</h1>  
     </main>
 </body>
 
