--- a/index.html
+++ b/index.html
@@ -13,13 +13,20 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="notes.html">Notes</a></li>
+                    <ul id="notes-sub-list" class="notes-sub-list">
+                        <li><a href="w1Notes.html">Week 1 Notes</a></li>
+                        <li><a href="w2Notes.html">Week 2 Notes</a></li>
+                    </ul>
                 <li><a href="examples.html">Examples</a></li>
                 <li><a href="teamMeetings.html">Team Meetings</a></li>
+                    <ul>
+                        <li><a href="w2TeamMeeting.html">Week 2 Meeting</a></li>
+                    </ul>
             </ul>
         </nav>
     </header>
     <main>
-        <p>This is the homepage for Jason Macdonald WDD330_W22 project.</p>
+        <h1>This is the homepage for Jason Macdonald WDD330_W22 project.</h1>
     </main>
 </body>
 
