--- a/teamMeetings.html
+++ b/teamMeetings.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Home</title>
+    <title>Team Meetings</title>
     <script src="main.js"> </script>
     <link rel="stylesheet" href="homeStyle.css">
 </head>
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <main>
-        <p>This is the homepage for Jason Macdonald WDD330_W22 project.</p>
+        <h1>All team meeting code excerpts will be added here.</h1>
     </main>
 </body>
 
