--- a/Pages/template.html
+++ b/Pages/template.html
@@ -1,19 +1,33 @@
 <!doctype html>
 <html>
+
 <head>
-  <title>Title of Your Page</title>
-  <script>
-
-  </script>
-
-  <style>
-
-  </style>
+    <title>Base Page</title>
+    <script src="main.js"> </script>
+    <link rel="stylesheet" href="homeStyle.css">
 </head>
 
 <body>
+    <header>
+        <nav class="main-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="notes.html">Notes</a></li>
+                    <ul id="notes-sub-list" class="notes-sub-list">
+                        <li><a href="w1Notes.html">Week 1 Notes</a></li>
+                        <li><a href="w2Notes.html">Week 2 Notes</a></li>
+                    </ul>
+                <li><a href="examples.html">Examples</a></li>
+                <li><a href="teamMeetings.html">Team Meetings</a></li>
+                    <ul>
+                        <li><a href="w2TeamMeeting.html">Week 2 Meeting</a></li>
+                    </ul>
+            </ul>
+        </nav>
+    </header>
     <main>
-        <p>Hello</p>
+        <h1>Base Page</h1>
     </main>
 </body>
+
 </html>
