Add baselines for subpages

--- a/examples.html
+++ b/examples.html
@@ -13,8 +13,15 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="notes.html">Notes</a></li>
+                    <ul id="notes-sub-list" class="notes-sub-list">
+                        <li><a href="w1Notes.html">Week 1 Notes</a></li>
+                        <li><a href="w2Notes.html">Week 2 Notes</a></li>
+                    </ul>
                 <li><a href="examples.html">Examples</a></li>
                 <li><a href="teamMeetings.html">Team Meetings</a></li>
+                    <ul>
+                        <li><a href="w2TeamMeeting.html">Week 2 Meeting</a></li>
+                    </ul>
             </ul>
         </nav>
     </header>
