Add handling to add notes to week 2 notes page

--- a/notes.html
+++ b/notes.html
@@ -26,7 +26,14 @@
         </nav>
     </header>
     <main>
-        <h1>All notes will be added here.</h1>  
+        <h1>Use the list below to navigate to a specific week</h1>  
+
+        <section>
+            <ul>
+                <li><a href="w1Notes.html">Week 1 Notes</a></li>
+                <li><a href="w2Notes.html">Week 2 Notes</a></li>
+            </ul>
+        </section>
     </main>
 </body>
 
