--- a/w2Notes.html
+++ b/w2Notes.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Base Page</title>
-    <script src="main.js"> </script>
-    <link rel="stylesheet" href="homeStyle.css">
+    <script src="note.js"> </script>
+    <link rel="stylesheet" href="noteStyle.css">
 </head>
 
 <body>
@@ -26,7 +26,16 @@
         </nav>
     </header>
     <main>
-        <h1>Base Page</h1>
+        <section id="note-input">
+            <h1>Week 2 Notes</h1>
+            <input type="text" id="note-title" placeholder="Note Title">
+            <textarea id="note-input" placeholder="Type your notes here"></textarea>
+            <button type="submit" id="note-save" onclick="saveNote()"></button>
+            <button type="submit" id="show-notes" onclick="showAllNotes()"></button>
+        </section>
+        <section id="display-notes">
+
+        </section>
     </main>
 </body>
 
