--- a/w2Notes.html
+++ b/w2Notes.html
@@ -30,8 +30,8 @@
             <h1>Week 2 Notes</h1>
             <input type="text" id="note-title" placeholder="Note Title">
             <textarea id="note-input" placeholder="Type your notes here"></textarea>
-            <button type="submit" id="note-save" onclick="saveNote()"></button>
-            <button type="submit" id="show-notes" onclick="showAllNotes()"></button>
+            <button type="submit" id="note-save" onclick="saveNote()">Save</button>
+            <button type="submit" id="show-notes" onclick="showAllNotes()">Show notes</button>
         </section>
         <section id="display-notes">
 
