--- a/w2Notes.html
+++ b/w2Notes.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="noteStyle.css">
 </head>
 
-<body>
+<body onload="showAllNotes()">
     <header>
         <nav class="main-nav">
             <ul>
@@ -26,14 +26,13 @@
         </nav>
     </header>
     <main>
-        <section id="note-input">
+        <section id="note-input-area">
             <h1>Week 2 Notes</h1>
             <input type="text" id="note-title" placeholder="Note Title">
-            <textarea id="note-input" placeholder="Type your notes here"></textarea>
+            <textarea id="note-inputs" placeholder="Type your notes here" class="note-inputs"></textarea>
             <button type="submit" id="note-save" onclick="saveNote()">Save</button>
-            <button type="submit" id="show-notes" onclick="showAllNotes()">Show notes</button>
         </section>
-        <section id="display-notes">
+        <section id="display-notes" class="display-notes">
 
         </section>
     </main>
