clean up HTML for week 2 notes.

--- a/w2Notes.html
+++ b/w2Notes.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Base Page</title>
+    <title>Week 2 Notes</title>
     <script src="note.js"> </script>
     <link rel="stylesheet" href="noteStyle.css">
 </head>
