--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
     <header>
-        <nav class="main-nav">
-            <ul>
+        <nav>
+            <ul class="main-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="notes.html">Notes</a></li>
                     <ul id="notes-sub-list" class="notes-sub-list">
