Add CSS to page

--- a/Hero/hero.html
+++ b/Hero/hero.html
@@ -59,7 +59,7 @@
             </select>
         </label>
         <br>
-        <label for='origin'>Origin Story:
+        <label for='origin' id="origin" >Origin Story:
         <br>
             <textarea id='origin' name='origin' rows='20' cols='60'></textarea>
         </label>
