--- a/QuizNinjaExercise/index.html
+++ b/QuizNinjaExercise/index.html
@@ -7,13 +7,20 @@
 <link rel='stylesheet' href='styles.css'>
 </head>
 <body>
-    <section class='dojo'>
+<section class='dojo'>
     <div class='quiz-body'>
         <header>
-        <h1>Quiz Ninja!</h1>
+            <h1>Quiz Ninja!</h1>
+            <div id='timer'>Time: <strong>20</strong></div>
+            <div id='score'>Score: <strong>0</strong></div>
         </header>
+    <div id='question'></div>
+    <div id='response'></div>
+    <div id='result'></div>
+    <div id='info'></div>
+    <button id='start'>Click to Start</button>
     </div>
-    </section>
+</section>
 <script src='main.js'></script>
 </body>
 </html>
