--- a/Challenge1/index.html
+++ b/Challenge1/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="main.js"></script>
+    <title>To Do List</title>
     <link rel="stylesheet" href="style.css">
-</head> 
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+</head>
+
 <body>
-    
+    <section class="toDolist">
+        <div class="listBody">
+            <header>
+                <h1>To Do List</h1>
+            </header>
+
+            <div id="list">
+                <ul id="itemsList">
+                    <li id="item1"><input type="checkbox" name="item1Check" id="item1Check"><label
+                            id="item1Text"></label><button type="reset"><i class='bx bxs-trash'></i></button></li>
+                    <li id="item2"><input type="checkbox" name="item2Check" id="item2Check"><label
+                            id="item2Text"></label><button type="reset"><i class='bx bxs-trash'></i></button></li>
+                    <li id="item3"><input type="checkbox" name="item3Check" id="item3Check"><label
+                            id="item3Text"></label><button type="reset"><i class='bx bxs-trash'></i></button></li>
+                    <li id="item4"><input type="checkbox" name="item4Check" id="item4Check"><label
+                            id="item4Text"></label><button type="reset"><i class='bx bxs-trash'></i></button></li>
+                    <li id="item5"><input type="checkbox" name="item5Check" id="item5Check"><label
+                            id="item5Text"></label><button type="reset"><i class='bx bxs-trash'></i></button></li>
+                </ul>
+            </div>
+
+            <div class="taskList">
+                <label id="totalTasks"></label>
+                <ul class="taskSortList">
+                    <button type="submit">
+                        <li>All</li>
+                    </button>
+                    <button type="submit">
+                        <li>Active Tasks</li>
+                    </button>
+                    <button type="submit">
+                        <li>Completed Tasks</li>
+                    </button>
+                </ul>
+            </div>
+
+            <div class="addItems"></div>
+            <form class="addToDo">
+                <input type="text" id="toDoInput">
+                <button type="submit" id="addTask"><i class='bx bx-plus'></i></button>
+            </form>
+        </div>
+    </section>
+    <script src="main.js" type="module"></script>
 </body>
+
 </html>
