--- a/Challenge1/index.html
+++ b/Challenge1/index.html
@@ -25,7 +25,7 @@
 
     </div>
 
-    <script src="Todos.js" type="module"></script>
+    <script src="Todos.js" type="text/javascript"></script>
 </body>
 
 </html>
