--- a/Challenge1/index.html
+++ b/Challenge1/index.html
@@ -7,6 +7,7 @@
     <title>To Do List</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+    <script src="/Challenge1/Todos.js" type="module"></script>
 </head>
 
 <body>
@@ -25,7 +26,6 @@
 
     </div>
 
-    <script src="Todos.js" type="text/javascript"></script>
 </body>
 
 </html>
