attempt different link for js file

--- a/Challenge1/index.html
+++ b/Challenge1/index.html
@@ -7,7 +7,7 @@
     <title>To Do List</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-    <script src="/Challenge1/Todos.js" type="module"></script>
+    <script src="/Challenge1/Todos.js" type="text/javascript"></script>
 </head>
 
 <body>
