match file name in reop

--- a/Challenge1/index.html
+++ b/Challenge1/index.html
@@ -30,7 +30,7 @@
             <button type="button" class="done-btn" onclick="finishedTasks(toDoList)">Completed Tasks</button>
         </div>
     </div>
-    <script src="Todos.js"></script>
+    <script src="ToDos.js"></script>
 </body>
 
 </html>
