testing js file link

--- a/Challenge1/index.html
+++ b/Challenge1/index.html
@@ -30,7 +30,7 @@
             <button type="button" class="done-btn" onclick="finishedTasks(toDoList)">Completed Tasks</button>
         </div>
     </div>
-    <script src="/Challenge1/Todos.js"></script>
+    <script src="./Todos.js"></script>
 </body>
 
 </html>
