update event handling for delet button

--- a/Challenge1/index.html
+++ b/Challenge1/index.html
@@ -139,7 +139,7 @@
         todoItemsList.addEventListener('click', (event) => {
             
             if (event.target.classList.contains('delete')) {
-                deleteTodo(event.target.parentElement.getAttribute('data-key'));
+                deleteTodo(event.target.parentElement.getElementById('data-key'));
             }
 
         });
