--- a/portfolio/Challenge2/index.html
+++ b/portfolio/Challenge2/index.html
@@ -15,7 +15,7 @@
                 <button data-time="60" class="baseTimerButton">1 minute</button>
                 <button data-time="300" class="baseTimerButton">5 minutes</button>
                 <button data-modal-target="#modal" class="customTimer">Custom Timer</button>
-                <a href="/portfolio/index.html">Back</a>
+                <button><a href="/portfolio/index.html">Back</a></button>
             </div>
         </div>
 
