Add video file to portfolio and to index page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,7 +20,7 @@
     </div>
 
    <div class="player">
-     <video class="player-video viewer" src=""></video>
+     <video class="player-video viewer" src="projectPresentation.mp4"></video>
 
      <div class="player-controls">
        <div class="progress">
