update to back buttons again

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,7 +13,7 @@
             <ul class="mainNav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="/Challenge1/index.html">To Do App</a></li>
-                <li><a href="./Challenge2/index.html">Countdown Timer App</a></li>
+                <li><a href="/Challenge2/index.html">Countdown Timer App</a></li>
             </ul>
         </nav>
     </header>
