Testing back buttons

--- a/portfolio/Challenge1/index.html
+++ b/portfolio/Challenge1/index.html
@@ -29,7 +29,7 @@
             <button type="button" class="total-btn" onclick="totalTasksUpdate(todos)">Total Tasks</button>
             <button type="button" class="active-btn" onclick="currentActiveTasks(todos)">Active Tasks</button>
             <button type="button" class="done-btn" onclick="finishedTasks(todos)">Completed Tasks</button>
-            <button><a href="portfolio/index.html">Back to Home</a></button>
+            <button><a href="/portfolio/index.html">Back to Home</a></button>
         </div>
     </div>
 </body>
