--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,8 +12,8 @@
         <nav class="navContainer">
             <ul class="mainNav">
                 <li><a href="/portfolio/index.html">Home</a></li>
-                <li><a href="portfolio/Challenge1/index.html">To Do App</a></li>
-                <li><a href="portfolio/Challenge2/index.html">Countdown Timer App</a></li>
+                <li><a href="/Challenge1/index.html">To Do App</a></li>
+                <li><a href="/Challenge2/index.html">Countdown Timer App</a></li>
             </ul>
         </nav>
     </header>
