--- a/Challenge2/index.html
+++ b/Challenge2/index.html
@@ -15,7 +15,7 @@
                 <button data-time="60" class="baseTimerButton">1 minute</button>
                 <button data-time="300" class="baseTimerButton">5 minutes</button>
                 <button data-modal-target="#modal" class="customTimer">Custom Timer</button>
-                <button><a href="index.html">Back</a></button>
+                <button><a href="https://jbmacdonald1012.github.io/WDD330_W22/">Back To Home</a></button>
             </div>
         </div>
 
